updated stylesheet to fix no-wrap on .contact-grid

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -108,9 +108,10 @@ section {
 .contact-grid {
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
   justify-content: center;
   align-items: center;
+  padding: 10px;
 }
 
 hr {
